--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles/3-common.css">
     <link rel="stylesheet" type="text/css" href="styles/3-header.css">
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="icon" type="image/x-icon" href="/images/icon.png">
 </head>
 
 <body>
