--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -20,20 +20,20 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Fake contents</h4>
+                <h4>California, Arizona...</h4>
                 <ul class="popover">
                     <li>
-                        <h2>State 1</h2>
+                        <h2>Arizona</h2>
                         <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
+                            <li>Page</li>
+                            <li>Page 2</li>
                         </ul>
                     </li>
                     <li>
-                        <h2>State 2</h2>
+                        <h2>California</h2>
                         <ul>
-                            <li>City 3</li>
-                            <li>City 4</li>
+                            <li>San Francisco</li>
+                            <li>Los Altos</li>
                         </ul>
                     </li>
                     <!--states -->
@@ -45,7 +45,6 @@
                 <ul class="popover">
                     <li>Fake Item 1</li>
                     <li>Fake Item 2</li>
-                    <!-- Add more items as needed -->
                 </ul>
             </div>
             <button class="search-button">Search</button>
