--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -41,10 +41,12 @@
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Fake contents</h4>
+                <h4>Internet, Kitchen</h4>
                 <ul class="popover">
-                    <li>Fake Item 1</li>
-                    <li>Fake Item 2</li>
+                    <li>Internet</li>
+                    <li>TV</li>
+                    <li>Kitchen</li>
+                    <li>Iron</li>
                 </ul>
             </div>
             <button class="search-button">Search</button>
