--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -21,30 +21,33 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>Fake contents</h4>
+                <h4>California, Arizona...</h4>
                 <ul class="popover">
                     <li>
-                        <h2>State 1</h2>
+                        <h2>Arizona</h2>
                         <ul>
-                            <li>City 1</li>
-                            <li>City 2</li>
+                            <li>Page</li>
+                            <li>Page 2</li>
                         </ul>
                     </li>
                     <li>
-                        <h2>State 2</h2>
+                        <h2>California</h2>
                         <ul>
-                            <li>City 3</li>
-                            <li>City 4</li>
+                            <li>San Francisco</li>
+                            <li>Los Altos</li>
                         </ul>
                     </li>
+                    <!--states -->
                 </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
                 <h4>Fake contents</h4>
                 <ul class="popover">
-                    <li>Fake Item 1</li>
-                    <li>Fake Item 2</li>
+                    <li>Internet</li>
+                    <li>TV</li>
+                    <li>Kitchen</li>
+                    <li>Iron</li>
                 </ul>
             </div>
             <button class="search-button">Search</button>
@@ -53,10 +56,13 @@
         <section class="places">
             <h1>Places</h1>
             <article>
-                <h2>Place Name</h2>
+                <h2>My home</h2>
             </article>
             <article>
-                <h2>Place Name</h2>
+                <h2>Tiny house</h2>
+            </article>
+            <article>
+                <h2>A suite</h2>
             </article>
         </section>
     </div>
